[tool.poetry]
name = "a320"
version = "0.1.0"
description = "Creates Airbus A320 panels"
authors = ["Guillaume Lederrey <guillaume.lederrey@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
kicad-skip = "^0.2.5"
pathlib = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
